assets/styles/global.css
:root {
  --defaut-bg-color: #dcd9d9d7;
  --defaut-header-color: #ff6769;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  width: 100%;
  height: 100%;
}

body {
  color: white;
}

a {
  color: inherit;
  text-decoration: none;
}

#main {
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

/* CUSTOM SCROLLBAR */

section::-webkit-scrollbar {
  width: 8px;
  border-radius: 8px;
  background: #0000;
}

section::-webkit-scrollbar-thumb {
  background: #a9a9a978;
}

section::-webkit-scrollbar-thumb:hover {
  background: #555;
}

/* Hide scrollbar x for breadcrumb */
ul::-webkit-scrollbar {
  background: transparent;
}

/* FOR FIREFOX ONLY */
section {
  scrollbar-width: thin;
  scrollbar-color: #a9a9a978 #0000;
}

/* CUSTOM SCROLLBAR END */

